examples/test/testpolicy13772.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13772
  namespace: namespace252
spec:
  podSelector:
    matchLabels:
      key40: value46
      key23: value9
      key15: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value8
      podSelector:
        matchLabels:
          key47: value0
